cmake_minimum_required(VERSION 3.29)
project(Team_30)

set(CMAKE_CXX_STANDARD 20)

add_executable(Team_30 main.cpp
       Citizen.cpp
       EmploymentStatus.cpp
       Satisfied.cpp
       Unsatisfied.cpp
       OfficeJob.cpp
       IndustrialJob.cpp
       Unemployed.cpp
       TaxBracket.cpp
       LowestTaxBracket.cpp
       MiddleTaxBracket.cpp
       HighestTaxBracket.cpp
       Government.cpp
       Building.cpp
       BuildingFactory.cpp
       Underconstruction.cpp
       Built.cpp
       Destroyed.cpp
       Residential.cpp
       Commercial.cpp
       Industrial.cpp
       Landmark.cpp
       ResidentialFactory.cpp
       CommercialFactory.cpp
       IndustrialFactory.cpp
       LandmarkFactory.cpp
       Emergencies.cpp
       Fires.cpp
       Earthquake.cpp
       Thieves.cpp
       CityGrowthObserver.cpp
       CategorizationStrategy.cpp
       EconomyCategorization.cpp
       PopulationCategorization.cpp
       Population.cpp
       PopulationGrowth.cpp
       Infrastructure.cpp
       Housing.cpp
       Economy.cpp
       Road.cpp
       Transport.cpp
       PrivateTransport.cpp
       PublicTransport.cpp
       Plane.cpp
       SetRedLightsCommand.cpp
       Sign.cpp
       Taxi.cpp
       Train.cpp
       Roadsign.cpp
       BillboardSign.cpp
       TrafficLight.cpp
       Area.cpp
       trafficCommand.cpp
)
